--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:label="@string/setting"/>
         <activity android:name=".MainActivity"/>
 
-        <activity android:name=".ui.GuideActivity"/>
+        <activity android:name=".ui.GuideActivity"
+        android:theme="@style/FullScreen"/>
 
     </application>
 
